--- a/gtk-4.0/widgets/_windows.scss
+++ b/gtk-4.0/widgets/_windows.scss
@@ -1,9 +1,7 @@
 /**********************
  * Window Decorations *
  *********************/
-decoration, window {
-  border-radius: 4px 4px 0 0;
-
+window {
   // lamefun trick to get rounded borders regardless of CSD use
   border-width: 0px;
 
@@ -11,71 +9,72 @@ decoration, window {
   // see bug #722563
   $_wm_border: if($variant=='light', transparentize(black, 0.77), transparentize($borders_color, 0.1));
   $_wm_border_backdrop: if($variant=='light', transparentize(black, 0.82), transparentize($borders_color, 0.1));
-
-    // lamefun trick to get rounded borders regardless of CSD use
-  border-width: 0px;
-
-  box-shadow: 0 4px 10px 2px transparentize($borders_color, 0.2);
-  // FIXME rationalize shadows
-
-  // this is used for the resize cursor area
-  margin: 10px;
+  $_window_radius: 4px;
+  $_menu_radius: 7px;
 
 	// added for accessibility (window borders)
 	border: 2px solid $window_border_color;
-	background: $window_border_color;
 
-  &:backdrop {
-    // the transparent shadow here is to enforce that the shadow extents don't
-    // change when we go to backdrop, to prevent jumping windows.
-    // The biggest shadow should be in the same order then in the active state
-    // or the jumping will happen during the transition.
-    box-shadow: 0 4px 10px 2px transparentize($borders_color, 0.4);
-    transition: $backdrop_transition;
-    // added for accessibility (window borders)
-    border: 2px solid $window_border_backdrop_color;
-		background: $window_border_backdrop_color;
+	&.csd {
+		box-shadow: 0 4px 9px 1px transparentize(black, 0.5),
+								0 0 0 1px $_wm_border; //doing borders with box-shadow
+		margin: 0px;
+		border-radius: $_window_radius $_window_radius 0 0;
+		&:backdrop {
+			// the transparent shadow here is to enforce that the shadow extents don't
+			// change when we go to backdrop, to prevent jumping windows.
+			// The biggest shadow should be in the same order then in the active state
+			// or the jumping will happen during the transition.
+			box-shadow: 0 3px 9px 1px transparent,
+									0 2px 6px 2px transparentize(black, 0.8),
+									0 0 0 1px $_wm_border_backdrop;
+			transition: $backdrop_transition;
+			// backdrop!!! added for accessibility (window borders)
+			border: 2px solid $window_border_backdrop_color;
+		}
+		&.popup {
+			border-radius: $_menu_radius;
+			box-shadow: 0 1px 2px transparentize(black, 0.8),
+									0 0 0 1px transparentize($_wm_border, 0.1);
+		}
+		&.dialog.message {
+			border-radius: $_window_radius;
+			box-shadow: 0 1px 2px transparentize(black, 0.8),
+									0 0 0 1px transparentize($_wm_border, 0.1);
+		}
+	}
+
+	&.solid-csd {
+		margin: 0;
+		padding: 4px;
+		border: solid 1px $borders_color;
+		border-radius: 0;
+		box-shadow: inset 0 0 0 4px $borders_color, inset 0 0 0 $headerbar_color, inset 0 1px transparentize($fg_color, 0.93);
+
+		&:backdrop { box-shadow: inset 0 0 0 4px $borders_color, inset 0 0 0 3px $backdrop_bg_color, inset 0 1px transparentize($fg_color, 0.93); }
+	}
+
+	&.maximized,
+	&.fullscreen { border-radius: 0; box-shadow: none; }
+
+	&.tiled,
+	&.tiled-top,
+	&.tiled-left,
+	&.tiled-right,
+	&.tiled-bottom {
+		border-radius: 0;
+		box-shadow: 0 0 0 1px $_wm_border_backdrop,
+								0 0 0 20px transparent; //transparent control workaround -- #3670
+	}
+	&:backdrop {
+		box-shadow: 0 0 0 1px $_wm_border_backdrop, 0 0 0 20px transparent; // #3670
+		// backdrop!!! added for accessibility (window borders)
+		border: 2px solid $window_border_backdrop_color;
   }
+	&.popup { box-shadow: none; }
 
-  .maximized &,
-  .fullscreen &,
-  .tiled & { border-radius: 0; }
-
-  .popup & {
-		box-shadow: none;
-		border: 0px solid $window_border_backdrop_color;
-		background: $window_border_backdrop_color;
-  }
-
-  // server-side decorations as used by mutter
-  .ssd & { box-shadow: none; } //just doing borders, wm draws actual shadows
-
-  .csd.popup & {
-    border-radius: 7px;
-    box-shadow: 0 4px 8px $menu_shadow_color;
-    border: 1px solid $borders_color;
-  }
-
-  tooltip.csd & {
-    border-radius: 5px;
-    box-shadow: none;
-    border: 0px solid $window_border_backdrop_color;
-		background: $window_border_backdrop_color;
-  }
-
-  messagedialog.csd & {
-    border-radius: 7px;
-    box-shadow: 0 1px 2px transparentize(black, 0.8),
-                0 0 0 1px transparentize($_wm_border,0.1);
-  }
-
-  .solid-csd & {
-    border-radius: 0;
-	  margin: 0px;
-    background-color: $backdrop_bg_color;
-    border: solid 1px $backdrop_borders_color;
-    box-shadow: none;
-  }
+	// server-side decorations as used by mutter
+	&.ssd { box-shadow: 0 0 0 1px $_wm_border; } //just doing borders, wm draws actual shadows
 }
 
 // Window Close button
